update brewfile and aliases

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -88,9 +88,9 @@ bind C-n next-window
 
 # THEMES
 # Uncomment to display music playing
-# tm_spotify="#[fg=$tm_color_music]#(osascript $DEV_DIR/dotfiles/applescripts/spotify.scpt)"
-# tm_itunes="#[fg=$tm_color_music]#(osascript $DEV_DIR/dotfiles/applescripts/itunes.scpt)"
-# set -g status-right $tm_itunes' '$tm_spotify
+tm_spotify="#[fg=$tm_color_music]#(osascript $DEV_DIR/dotfiles/applescripts/spotify.scpt)"
+tm_itunes="#[fg=$tm_color_music]#(osascript $DEV_DIR/dotfiles/applescripts/itunes.scpt)"
+set -g status-right $tm_itunes' '$tm_spotify
 #
 # Thyme integration
 set-option -g status-right '#(cat ~/.thyme-tmux)'
