--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -114,13 +114,14 @@ if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-c
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-resurrect      \
-  # nhdaly/tmux-scroll-copy-mode      \
+  jimeh/tmux-themepack             \
+  nhdaly/tmux-scroll-copy-mode     \
 '
 # Other examples:
 # github_username/plugin_name    \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
-
+set -g @themepack 'double/blue'
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
