add support for spacemacs

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,12 +70,16 @@ bind -r L resize-pane -R 10
 # KEY BINDINGS
 ###############
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t -Tcopy-mode-vi Enter
+# bind-key -t -Tcopy-mode-vi Enter copy-pipe
 
 # easier and faster switching between next/prev window
 bind C-p previous-window
