--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -106,8 +106,8 @@ if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 ###############
 # POWERLINE
 ###############
-run-shell "powerline-daemon -q"
-if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
+# run-shell "powerline-daemon -q"
+# if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
 
 # TMUX Plugin Manager Configuration
 # List of plugins
