--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,14 +20,8 @@ set-option -g status-position top
 # enable vim focus events
 set -g focus-events on
 
-# set mouse options
-# set-option -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set-option -g mouse-select-window on
-# set-window-option -g mode-mouse on
+# fix mouse scroll issues using the tmux-better-mouse-mode plugin
 set-option -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # pane color option
 set -g pane-border-fg black
@@ -70,16 +64,12 @@ bind -r L resize-pane -R 10
 # KEY BINDINGS
 ###############
 # Setup 'v' to begin selection as in Vim
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-# unbind -t -Tcopy-mode-vi Enter
-# bind-key -t -Tcopy-mode-vi Enter copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # easier and faster switching between next/prev window
 bind C-p previous-window
@@ -92,13 +82,9 @@ bind C-n next-window
 
 # THEMES
 # Uncomment to display music playing
-tm_spotify="#[fg=$tm_color_music]#(osascript $DEV_DIR/dotfiles/applescripts/spotify.scpt)"
-tm_itunes="#[fg=$tm_color_music]#(osascript $DEV_DIR/dotfiles/applescripts/itunes.scpt)"
-set -g status-right $tm_itunes' '$tm_spotify
-#
-# Thyme integration
-set-option -g status-right '#(cat ~/.thyme-tmux)'
-set-option -g status-interval 1
+# tm_spotify="#[fg=$tm_color_music]#(osascript $DEV_DIR/dotfiles/applescripts/spotify.scpt)"
+# tm_itunes="#[fg=$tm_color_music]#(osascript $DEV_DIR/dotfiles/applescripts/itunes.scpt)"
+# set -g status-right $tm_itunes' '$tm_spotify
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
@@ -106,8 +92,8 @@ if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 ###############
 # POWERLINE
 ###############
-# run-shell "powerline-daemon -q"
-# if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
+run-shell "powerline-daemon -q"
+if-shell 'env "$POWERLINE_CONFIG_COMMAND" tmux setup' '' 'run-shell "powerline-config tmux setup"'
 
 # TMUX Plugin Manager Configuration
 # List of plugins
@@ -115,17 +101,130 @@ if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 # prefix + I - To Install Plugins
 # prefix + U - To update plugins
 # prefix + alt + u - Uninstall unused plugins
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-resurrect      \
-  jimeh/tmux-themepack             \
-  nhdaly/tmux-scroll-copy-mode     \
-'
+set -g @plugins 'tmux-plugins/tpm'
+set -g @plugins 'tmux-plugins/tmux-resurrect'
+# set -g @plugins 'nhdaly/tmux-scroll-copy-mode'
+set -g @plugins 'nhdaly/tmux-better-mouse-mode'
+# set -g @plugins 'jimeh/tmux-themepack'
+
+# Override the right-status with memory and cpu usage (in powerline format).
+# https://github.com/thewtex/tmux-mem-cpu-load
+
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g status-interval 2
+set -g status-right "#[fg=blue]#(/usr/local/bin/tmux-mem-cpu-load --colors --powerline-right --interval 2 --averages-count 0)#[default]"
+
+# Basic status bar colors
+set -g status-fg colour238
+set -g status-bg colour233
+
+set -g status-left-bg colour233
+set -g status-left-fg colour243
+set -g status-left-length 150
+set -g status-left "#[fg=colour232,bg=colour24,bold] #H #[fg=colour24,bg=colour240]#[fg=colour233,bg=colour240] %d-%b-%y  #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour235,bg=colour233]"
+
+# Window status
+set -g window-status-format "  #I:#W#F  "
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour33,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
+
+# Current window status
+set -g window-status-current-bg colour38
+set -g window-status-current-fg colour233
+
+# Window with activity status
+set -g window-status-activity-bg colour245 # fg and bg are flipped here due to
+set -g window-status-activity-fg colour233 # a bug in tmux
+
+# Window separator
+set -g window-status-separator ""
+
+# Window status alignment
+set -g status-justify centre
+
+# Pane border
+set -g pane-border-bg default
+set -g pane-border-fg colour238
+
+# Active pane border
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour38
+
+# Pane number indicator
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
+
+# Clock mode
+set -g clock-mode-colour colour38
+set -g clock-mode-style 24
+
+# Message
+set -g message-bg colour38
+set -g message-fg black
+
+# Command message
+set -g message-command-bg colour233
+set -g message-command-fg black
+
+# Mode
+set -g mode-bg colour38
+set -g mode-fg colour231
+
+
+# Window status
+set -g window-status-format "  #I:#W#F  "
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour33,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
+
+# Current window status
+set -g window-status-current-bg colour38
+set -g window-status-current-fg colour233
+
+# Window with activity status
+set -g window-status-activity-bg colour245 # fg and bg are flipped here due to
+set -g window-status-activity-fg colour233 # a bug in tmux
+
+# Window separator
+set -g window-status-separator ""
+
+# Window status alignment
+set -g status-justify centre
+
+# Pane border
+set -g pane-border-bg default
+set -g pane-border-fg colour238
+
+# Active pane border
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour30
+
+# Pane number indicator
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
+
+# Clock mode
+set -g clock-mode-colour colour38
+set -g clock-mode-style 24
+
+# Message
+set -g message-bg colour38
+set -g message-fg black
+
+# Command message
+set -g message-command-bg colour233
+set -g message-command-fg black
+
+# Mode
+set -g mode-bg colour38
+set -g mode-fg colour231
+
 # Other examples:
-# github_username/plugin_name    \
-# git@github.com/user/plugin     \
-# git@bitbucket.com/user/plugin  \
-set -g @themepack 'double/blue'
+# github_username/plugin_name
+# git@github.com/user/plugin
+# git@bitbucket.com/user/plugin
+
+# === !! Auto-install tpm if it hasn't been installed already !! ===
+if "test ! -d ~/.tmux/plugins/tpm" \
+     "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
