--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,12 +64,14 @@ bind -r L resize-pane -R 10
 # KEY BINDINGS
 ###############
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi 'Enter' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # easier and faster switching between next/prev window
 bind C-p previous-window
@@ -146,8 +148,8 @@ set -g pane-border-bg default
 set -g pane-border-fg colour238
 
 # Active pane border
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour38
+set -g pane-active-border-bg colour240
+set -g pane-active-border-fg colour5
 
 # Pane number indicator
 set -g display-panes-colour colour233
@@ -188,13 +190,17 @@ set -g window-status-separator ""
 # Window status alignment
 set -g status-justify centre
 
+# set inactive/active window styles
+# set -g window-style 'fg=colour247,bg=colour236'
+# set -g window-active-style 'fg=colour250,bg=default'
+
 # Pane border
 set -g pane-border-bg default
 set -g pane-border-fg colour238
 
 # Active pane border
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour30
+set -g pane-active-border-bg colour240
+set -g pane-active-border-fg colour5
 
 # Pane number indicator
 set -g display-panes-colour colour233
