--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ set -g repeat-time 0
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
 # super useful when using "grouped sessions" and multi-monitor setup
-setw -g aggressive-resize on
+setw -g aggressive-resize off
 
 # status bar
 set-option -g status-position top
